# cuda-sum-search

./: .gitignore  CMakeLists.txt  README.md  modules_wiener.txt  plot_results.py  run_tests.sh  submit_wiener.sh
src/: CMakeLists.txt  cli_config.h  cpu_scan.cuh  error.cuh  main.cu  scan.cuh  scan_0mem.cuh  scan_config.cuh  sum_search.cuh  sum_search_0mem.cuh  sum_search_halfmem.cuh  sum_search_halfmem_coalesced.cuh  sum_search_oacc.h  sum_search_oacc_simple.h  test_result.h
